[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deidentify-fhir"
version = "0.1.0"
description = "Pure-Python FHIR de-identification utility with HIPAA Safe Harbor support."
authors = [
    {name = "Joe Bartlett", email = "jbartlett.gh@protonmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
deidentify-fhir = "deidentify_fhir:main"

[project.optional-dependencies]
dev = ["pytest>=7"]